# src/main/kotlin/com/service/api/dto/SaveIdentityResponse.kt
@@ -2,6 +2,7 @@ package com.service.api.dto
 
 import com.fasterxml.jackson.annotation.JsonInclude
 import com.service.api.common.enum.AgeGroup
+import com.service.api.model.SocialAccount
 
 @JsonInclude(value = JsonInclude.Include.NON_NULL)
 data class SaveIdentityResponse(
@@ -10,4 +11,5 @@ data class SaveIdentityResponse(
     val serviceUserId: Long? = null,
     val accessToken: String? = null,
     val refreshToken: String? = null,
+    val socialAccounts: List<SocialAccount>? = null,
 )
